// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`CodeEditor renders correctly with file 1`] = `
"
 \x1B[1m\x1B[35m📝 Code Editor\x1B[39m\x1B[22m

 \x1B[34m📄 src/index.ts\x1B[39m

 \x1B[90m┌────────────────────────────────────────────────────────────────────────────────────────────────┐\x1B[39m
 \x1B[90m│\x1B[39m                                                                                                \x1B[90m│\x1B[39m
 \x1B[90m│\x1B[39m \x1B[90m\x1B[2mCode content will appear here...\x1B[22m\x1B[39m                                                               \x1B[90m│\x1B[39m
 \x1B[90m│\x1B[39m                                                                                                \x1B[90m│\x1B[39m
 \x1B[90m└────────────────────────────────────────────────────────────────────────────────────────────────┘\x1B[39m

 \x1B[1m\x1B[33m🔧 File Tree\x1B[39m\x1B[22m

 \x1B[90m📁 src/\x1B[39m
 \x1B[90m  📄 index.ts\x1B[39m
 \x1B[90m  📁 components/\x1B[39m
 \x1B[90m    📄 ComposerApp.tsx\x1B[39m
 \x1B[90m    📄 ChatInterface.tsx\x1B[39m
"
`;

exports[`CodeEditor renders correctly without file 1`] = `
"
 \x1B[1m\x1B[35m📝 Code Editor\x1B[39m\x1B[22m

 \x1B[90m┌────────────────────────────────────────────────────────────────────────────────────────────────┐\x1B[39m
 \x1B[90m│\x1B[39m                                                                                                \x1B[90m│\x1B[39m
 \x1B[90m│\x1B[39m                                                                                                \x1B[90m│\x1B[39m
 \x1B[90m│\x1B[39m                                        \x1B[90m\x1B[2mNo file selected\x1B[22m\x1B[39m                                        \x1B[90m│\x1B[39m
 \x1B[90m│\x1B[39m                                                                                                \x1B[90m│\x1B[39m
 \x1B[90m│\x1B[39m                                                                                                \x1B[90m│\x1B[39m
 \x1B[90m└────────────────────────────────────────────────────────────────────────────────────────────────┘\x1B[39m

 \x1B[1m\x1B[33m🔧 File Tree\x1B[39m\x1B[22m

 \x1B[90m📁 src/\x1B[39m
 \x1B[90m  📄 index.ts\x1B[39m
 \x1B[90m  📁 components/\x1B[39m
 \x1B[90m    📄 ComposerApp.tsx\x1B[39m
 \x1B[90m    📄 ChatInterface.tsx\x1B[39m
"
`;
